# emaxx

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
compat/: build_emacs_homebrew.sh  compat_regressions.json  emacs_compat_runner.el  emacs_perf_runner.el  oracle.lock.json  oracle_tests_all.md  oracle_tests_all.txt  perf_scenarios.json
docs/: performance.md  testing.md
src/: anti_cheat.rs  batch.rs  buffer.rs  command.rs  compat.rs  display.rs  keymap.rs  lib.rs  main.rs  overlay.rs  perf.rs
src/lisp/: eval.rs  faces_compat.el  json.rs  mod.rs  primitives.rs  reader.rs  sqlite.rs  types.rs
test/lisp/: kmacro-function-inspect.el
tests/: ert_runner.rs
