[package]
name = "emaxx"
version = "0.1.0"
edition = "2024"

[dependencies]
ropey = "1.6"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
num-bigint = "0.4"
num-traits = "0.2"
unicode-width = "0.2"
flate2 = "1.1"
roxmltree = "0.20"

[dev-dependencies]
